<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.codepath.simpletodo.EditActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etTask"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/textView"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:paddingBottom="@dimen/align_edittext"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/task"
        android:id="@+id/textView"
        android:layout_alignBottom="@id/etTask"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/align_edittext"
        android:layout_marginRight="@dimen/padding_small"/>




    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etNote"
        android:layout_below="@+id/etTask"
        android:layout_alignRight="@+id/etTask"
        android:layout_alignEnd="@+id/etTask"
        android:layout_toRightOf="@+id/textView2"
        android:layout_toEndOf="@+id/textView2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/note"
        android:id="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@id/etNote"
        android:paddingBottom="@dimen/align_edittext"
        android:layout_marginRight="@dimen/padding_small"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etDueDate"
        android:layout_below="@+id/etNote"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignRight="@+id/etNote"
        android:layout_alignEnd="@+id/etNote"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/due_date"
        android:id="@+id/textView3"
        android:layout_alignBottom="@id/etDueDate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="@dimen/align_edittext"
        android:layout_marginRight="@dimen/padding_small"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/etDueDate"
        android:layout_alignRight="@+id/etDueDate"
        android:layout_alignEnd="@+id/etDueDate"
        android:id="@+id/rl1"
        android:layout_marginTop="@dimen/padding_medium">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/priority"
            android:id="@+id/textView4"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spPriority"
            android:layout_weight="1"
            android:entries="@array/priority_choices"
            android:spinnerMode="dropdown"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/textView4"
            android:layout_toEndOf="@+id/textView4"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/rl1"
        android:layout_alignRight="@+id/etDueDate"
        android:layout_alignEnd="@+id/etDueDate"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spStatus"
            android:layout_weight="1"
            android:entries="@array/status_choices"
            android:spinnerMode="dropdown"
            android:prompt="@string/status"
            android:layout_alignTop="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toEndOf="@+id/textView5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/status"
            android:id="@+id/textView5"
            />
    </RelativeLayout>

</RelativeLayout>
